# Agent-OS

./: .gitignore  README.md  config.py  index.html  main.py  pyproject.toml
cli/: commands.py  main.py
config/: config.yaml  policies.yaml
core/: counterfactual.py  decision_log.py  engine.py  graph.py  introspect.py  llm.py  loop.py  memory.py  meta_learner.py  observer.py  planner.py  policy_cache.py  registry.py  state.py  tools.py  utils.py
db/: agent.db  schema.sql
examples/: simple_agent.py
graph/: definition.py  validator.py  visualizer.py
modules/: memory.py  planner.py  policy.py  tools.py
observability/: counterfactual.py  drift.py  introspect.py  logger.py
runtime/: context.py  executor.py  scheduler.py
tests/: test_graph.py  test_tools.py
