[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "execution-graph-os"
version = "0.1.0"
description = "AI Execution Runtime with full observability and safe tool execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
egos = "cli.main:main"

[project.urls]
Repository = "https://github.com/haynbroit-alt/Agent-OS"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "runtime*", "graph*", "observability*", "cli*"]
